Updated polybar colors, moved tray right, fixed compton for fullscreen apps

--- a/dotfiles/i3-gray-blue/compton.conf
+++ b/dotfiles/i3-gray-blue/compton.conf
@@ -96,5 +96,10 @@ fade-exclude = [
 
 opacity-rule = [
 	"80:class_g = 'Termite'",
-	"80:class_g = 'Polybar'"
+	"80:class_g = 'Polybar'",
+    "99:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
+    "99:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
+    "99:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
+    "99:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
+    "99:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'",
 ];
