--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -24,9 +24,24 @@ services:
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+  nzbget:
+    image: linuxserver/nzbget
+    container_name: nzbget
+    volumes:
+      - /opt/appdata/nzbget/config:/config
+      - /opt/downloads:/downloads
+      - /mnt/disk1/downloads/complete:/downloads/complete
+    ports:
+      - 27020:6789
+    restart: always
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
   sonarr:
     image: linuxserver/sonarr
     container_name: sonarr
+    depends_on:
+      - nzbget
     volumes:
       - /mnt/storage/containers/sonarr:/config
       - /mnt/storage/media/tvseries:/tv
