--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -75,3 +75,10 @@ services:
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+  watchtower:
+    image: v2tec/watchtower
+    container_name: watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
+    command: --schedule "0 0 4 * * *" --cleanup
