--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -1,5 +1,36 @@
 version: '3'
 services:
+  portainer:
+    image: portainer/portainer
+    container_name: portainer
+    restart: always
+    command: -H unix:///var/run/docker.sock
+    ports:
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${POOL}/containers/portainer:/data
+      - ${POOL}/containers/shared:/shared
+    environment:
+      - TZ=${TZ}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=portainer"
+      - "traefik.frontend.rule=Host:portainer.${DOMAINNAME}"  
+#      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefixStrip: /portainer"
+      - "traefik.port=9000"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   plex:
     image: plexinc/pms-docker
     container_name: plex
@@ -35,7 +66,7 @@ services:
       - ${POOL}/media/downloads/complete:/downloads
       - ${POOL}/media/downloads/incomplete:/incomplete-downloads
     ports:
-      - 8081:8081
+      - 8081:8080
     restart: always
     environment:
       - PUID=${PUID}
@@ -84,14 +115,32 @@ services:
     restart: always
     image: linuxserver/ombi
     volumes:
-      - ${USERDIR}/containers/ombi:/config
-      - ${USERDIR}/containers/shared:/shared
+      - ${POOL}/containers/ombi:/config
+      - ${POOL}/containers/shared:/shared
     ports:
       - "3579:3579"
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=ombi"
+      - "traefik.frontend.rule=Host:ombi.${DOMAINNAME}"
+#      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefix: /ombi"
+      - "traefik.port=3579"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   watchtower:
     image: v2tec/watchtower
     container_name: watchtower
@@ -105,6 +154,11 @@ services:
     hostname: mariadb
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     restart: always
+    ports:
+      - 3306:3306
+    networks:
+      - traefik_proxy
+      - backend
     volumes:
       - ${POOL}/containers/mariadb/db:/var/lib/mysql
       - ${POOL}/containers/mariadb:/config
@@ -114,22 +168,77 @@ services:
       - MYSQL_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${HTTP_USERNAME}
       - TZ=${TZ}
+      - PUID=${PUID}
+      - PGID=${PGID}
+  phpmyadmin:
+    hostname: phpmyadmin
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    links:
+      - mariadb:db
+    ports:
+      - 8083:80
+    environment:
+      - PMA_HOST=mariadb
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    networks:
+      - traefik_proxy
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=pma"
+      - "traefik.frontend.rule=Host:pma.${DOMAINNAME}"
+      - "traefik.port=80"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   nextcloud:
     container_name: nextcloud
     image: nextcloud
     restart: always
-    ports:
-      - 8082:80
-      - 8443:443
     links:
       - mariadb
     volumes:
       - ${POOL}/containers/nextcloud:/config
+      - ${POOL}/containers/nextcloud/www:/var/www/html
       - ${POOL}/media:/data
       - ${POOL}/containers/shared:/shared
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud_admin
+      - MYSQL_PASSWORD=${CLOUDDB_PASS}
+      - MYSQL_HOST=${MYSQL_HOST}
+      - NEXTCLOUD_ADMIN_USER=${HTTP_USERNAME}
+      - NEXTCLOUD_ADMIN_PASSWORD=${HTTP_PASSWORD_PLAIN}
+    networks:
+      - traefik_proxy
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=nextcloud"
+      - "traefik.frontend.rule=Host:nextcloud.${DOMAINNAME}"
+#      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefix: /ombi"
+      - "traefik.port=80"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   traefik:
     image: traefik
     hostname: traefik
@@ -137,7 +246,7 @@ services:
     restart: always
     domainname: ${DOMAINNAME}
     networks:
-      - default
+      - backend
       - traefik_proxy
     ports:
       - "80:80"
@@ -166,9 +275,45 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${POOL}/containers/traefik:/etc/traefik
       - ${POOL}/containers/shared:/shared
+  gitlab:
+   image: 'gitlab/gitlab-ce:latest'
+   container_name: gitlab
+   restart: always
+   hostname: 'gitlab.${DOMAINNAME}'
+   environment:
+     GITLAB_OMNIBUS_CONFIG: |
+       external_url 'https://gitlab.${DOMAINNAME}'
+       GITLAB_ROOT_PASSWORD '${MYSQL_ROOT_PASSWORD}'
+   labels:
+     - "traefik.enable=true"
+     - "traefik.backend=gitlab"
+     - "traefik.frontend.rule=Host:gitlab.${DOMAINNAME}"
+#      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefixStrip: /gitlab"
+     - "traefik.port=10080"
+     - "traefik.docker.network=traefik_proxy"
+     - "traefik.frontend.headers.SSLRedirect=true"
+     - "traefik.frontend.headers.STSSeconds=315360000"
+     - "traefik.frontend.headers.browserXSSFilter=true"
+     - "traefik.frontend.headers.contentTypeNosniff=true"
+     - "traefik.frontend.headers.forceSTSHeader=true"
+     - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+     - "traefik.frontend.headers.STSIncludeSubdomains=true"
+     - "traefik.frontend.headers.STSPreload=true"
+     - "traefik.frontend.headers.frameDeny=true"
+   networks:
+     - backend
+     - traefik_proxy
+   ports:
+     - '10080:80'
+     - '10443:443'
+     - '10022:22'
+   volumes:
+     - '${POOL}/containers/gitlab/config:/etc/gitlab'
+     - '${POOL}/containers/gitlab/logs:/var/log/gitlab'
+     - '${POOL}/containers/gitlab/data:/var/opt/gitlab'
 networks:
   traefik_proxy:
     external:
       name: traefik_proxy
-    default:
-      driver: bridge
+  backend:
+    driver: bridge
