--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -275,42 +275,42 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${POOL}/containers/traefik:/etc/traefik
       - ${POOL}/containers/shared:/shared
-  gitlab:
-   image: 'gitlab/gitlab-ce:latest'
-   container_name: gitlab
-   restart: always
-   hostname: 'gitlab.${DOMAINNAME}'
-   environment:
-     GITLAB_OMNIBUS_CONFIG: |
-       external_url 'https://gitlab.${DOMAINNAME}'
-       GITLAB_ROOT_PASSWORD '${MYSQL_ROOT_PASSWORD}'
-   labels:
-     - "traefik.enable=true"
-     - "traefik.backend=gitlab"
-     - "traefik.frontend.rule=Host:gitlab.${DOMAINNAME}"
+#   gitlab:
+#    image: 'gitlab/gitlab-ce:latest'
+#    container_name: gitlab
+#    restart: always
+#    hostname: 'gitlab.${DOMAINNAME}'
+#    environment:
+#      GITLAB_OMNIBUS_CONFIG: |
+#        external_url 'https://gitlab.${DOMAINNAME}'
+#        GITLAB_ROOT_PASSWORD '${MYSQL_ROOT_PASSWORD}'
+#    labels:
+#      - "traefik.enable=true"
+#      - "traefik.backend=gitlab"
+#      - "traefik.frontend.rule=Host:gitlab.${DOMAINNAME}"
 #      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefixStrip: /gitlab"
-     - "traefik.port=10080"
-     - "traefik.docker.network=traefik_proxy"
-     - "traefik.frontend.headers.SSLRedirect=true"
-     - "traefik.frontend.headers.STSSeconds=315360000"
-     - "traefik.frontend.headers.browserXSSFilter=true"
-     - "traefik.frontend.headers.contentTypeNosniff=true"
-     - "traefik.frontend.headers.forceSTSHeader=true"
-     - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
-     - "traefik.frontend.headers.STSIncludeSubdomains=true"
-     - "traefik.frontend.headers.STSPreload=true"
-     - "traefik.frontend.headers.frameDeny=true"
-   networks:
-     - backend
-     - traefik_proxy
-   ports:
-     - '10080:80'
-     - '10443:443'
-     - '10022:22'
-   volumes:
-     - '${POOL}/containers/gitlab/config:/etc/gitlab'
-     - '${POOL}/containers/gitlab/logs:/var/log/gitlab'
-     - '${POOL}/containers/gitlab/data:/var/opt/gitlab'
+#      - "traefik.port=10080"
+#      - "traefik.docker.network=traefik_proxy"
+#      - "traefik.frontend.headers.SSLRedirect=true"
+#      - "traefik.frontend.headers.STSSeconds=315360000"
+#      - "traefik.frontend.headers.browserXSSFilter=true"
+#      - "traefik.frontend.headers.contentTypeNosniff=true"
+#      - "traefik.frontend.headers.forceSTSHeader=true"
+#      - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+#      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+#      - "traefik.frontend.headers.STSPreload=true"
+#      - "traefik.frontend.headers.frameDeny=true"
+#    networks:
+#      - backend
+#      - traefik_proxy
+#    ports:
+#      - '10080:80'
+#      - '10443:443'
+#      - '10022:22'
+#    volumes:
+#      - '${POOL}/containers/gitlab/config:/etc/gitlab'
+#      - '${POOL}/containers/gitlab/logs:/var/log/gitlab'
+#      - '${POOL}/containers/gitlab/data:/var/opt/gitlab'
 networks:
   traefik_proxy:
     external:
