--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -278,6 +278,40 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${POOL}/containers/traefik:/etc/traefik
       - ${POOL}/containers/shared:/shared
+  gitea:
+    image: gitea/gitea:latest
+    container_name: gitea
+    environment:
+      - USER_UID=${PUID}
+      - USER_GID=${PGID}
+      - DB_TYPE=mysql
+      - DB_HOST=${MYSQL_HOST}
+      - DB_NAME=gitea
+      - DB_USER=gitea
+      - DB_PASSWD=${HTTP_PASSWORD}
+    restart: always
+    networks:
+      - backend
+    volumes:
+      - ${POOL}/containers/gitea:/data
+    ports:
+      - "8084:3000"
+      - "222:22"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=gitea"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.rule=Host:git.${DOMAINNAME}"
+      - "traefik.port=3000"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=${DOMAINNAME}"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
 #   gitlab:
 #    image: 'gitlab/gitlab-ce:latest'
 #    container_name: gitlab
